--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -9,7 +9,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     env:
-        name: "filicipa/${GITHUB_REPOSITORY#*/}"
+        name: "filicipa/webpage-circus"
         tag: "${{ GITHUB.SHA }}"
     steps:
       - name: Login to Docker Hub
@@ -29,4 +29,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.name }}:${{ env.tag }}
+          tags: "${{ env.name }}:${{ env.tag }}"
