--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -42,10 +42,14 @@ jobs:
             token: ${{ secrets.ARGOCD_REPO_TOKEN }}
             path: argocd-repo
   
+        # - name: Update image tag in circus.yaml
+        #   run: |
+        #     sed -i "s|\(value: filicipa/webpage-circus:\)[^ ]*|\1${{ github.sha }}|" argocd-repo/dev/applications/circus.yaml
+  
         - name: Update image tag in circus.yaml
           run: |
-            sed -i "s|\(value: filicipa/webpage-circus:\)[^ ]*|\1${{ github.sha }}|" argocd-repo/dev/applications/circus.yaml
-  
+            yq e '.spec.source.helm.parameters[] | select(.name == "container.image") | .value = "filicipa/webpage-circus:${{ github.sha }}"' -i argocd-repo/dev/applications/circus.yaml
+
         - name: Commit and push
           run: |
             cd argocd-repo
