--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -48,7 +48,7 @@ jobs:
   
         - name: Update image tag in circus.yaml
           run: |
-            yq e '.spec.source.helm.parameters[] | select(.name == "container.image") | .value = "filicipa/webpage-circus:${{ github.sha }}"' -i argocd-repo/dev/applications/circus.yaml
+            yq eval '.spec.source.helm.parameters[] |= select(.name == "container.image").value = "filicipa/webpage-circus:${GITHUB_SHA}"' -i argocd-repo/dev/applications/circus.yaml
 
         - name: Commit and push
           run: |
