--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -48,7 +48,7 @@ jobs:
   
         - name: Update image tag in circus.yaml with yq
           run: |
-            yq e '.container.image = "filicipa/webpage-circus:'"$GITHUB_SHA"'"' -i argocd-repo/HelmCharts/MyChart1/values.yaml
+            yq e '.container.image = "filicipa/webpage-circus:`"$GITHUB_SHA`"" -i argocd-repo/HelmCharts/MyChart1/values.yaml
         
         - name: Commit and push
           run: |
