--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -48,6 +48,8 @@ jobs:
   
         - name: Update image tag in circus.yaml with yq
           run: |
+            ls -la argocd-repo
+            cat argocd-repo/HelmCharts/MyChart1/values.yaml
             yq e ".container.image = \"filicipa/webpage-circus:${GITHUB_SHA}\"" -i argocd-repo/HelmCharts/MyChart1/values.yaml
         
         - name: Commit and push
