--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -48,8 +48,6 @@ jobs:
   
         - name: Update image tag in circus.yaml with yq
           run: |
-            ls -la argocd-repo
-            cat argocd-repo/HelmCharts/MyChart1/values.yaml
             yq e ".container.image = \"filicipa/webpage-circus:${GITHUB_SHA}\"" -i argocd-repo/HelmCharts/MyChart1/values.yaml
         
         - name: Commit and push
@@ -57,6 +55,6 @@ jobs:
             cd argocd-repo
             git config user.name "GitHub Actions"
             git config user.email "actions@github.com"
-            git add dev/applications/circus.yaml
+            git add .
             git commit -m "Update circus image tag to ${{ github.sha }}"
             git push
