--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
         name: "filicipa/webpage-circus"
-        tag: "${GITHUB_SHA}"
+        tag: ${GITHUB_SHA}
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
