--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -5,12 +5,13 @@ on:
     branches: 
         - master
 
+env:
+  name: "filicipa/webpage-circus"
+  tag: ${{ github.sha }}        
+
 jobs:
   CI:
     runs-on: ubuntu-latest
-    env:
-        name: "filicipa/webpage-circus"
-        tag: ${GITHUB_SHA}
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -44,7 +45,7 @@ jobs:
   
         - name: Update image tag in circus.yaml with yq
           run: |
-            yq e ".container.image = \"filicipa/webpage-circus:${GITHUB_SHA}\"" -i argocd-repo/HelmCharts/MyChart1/values.yaml
+            yq e ".container.image = \"${{ env.name }}:${{ env.tag }}\"" -i argocd-repo/HelmCharts/MyChart1/values.yaml
         
         - name: Commit and push
           run: |
@@ -52,5 +53,5 @@ jobs:
             git config user.name "GitHub Actions"
             git config user.email "actions@github.com"
             git add .
-            git commit -m "Update circus image tag to ${GITHUB_SHA}"
+            git commit -m "Update circus image tag to ${{ env.tag }}"
             git push
